Activity Log: fix long description alignment

--- a/client/my-sites/stats/activity-log-item/style.scss
+++ b/client/my-sites/stats/activity-log-item/style.scss
@@ -165,6 +165,7 @@
 .activity-log-item__title {
 	flex: 4 1;
 	font-size: 14px;
+	word-break: break-word;
 
 	@include breakpoint( "<960px" ) {
 		margin-bottom: 16px;
